Fix RAG strict mode + ChatService update + upload stability